# support101

./: .env.example  .eslintignore.backup  .eslintrc.json  .flake8  .gitignore  .stylelintignore  .stylelintrc.json  .windsurfrules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_SYSTEM.md  LICENSE  Makefile  PRD.md  README.md  auto-ingest-docs.sh  biome.json  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  env.d.ts  fix_support101.sh  mcp-config.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  start-all.sh  turbo.json
.github/workflows/: ci.yml
apps/: README.md
apps/admin-dashboard/: package.json  tailwind.config.js  vitest.config.ts
apps/agent-copilot/: Dockerfile  README.md  background.js  contentScript.js  eslint.config.js  eslint.config.mjs  manifest.json  package-lock.json  package.json  sidebar.css  sidebar.jsx  tsconfig.json  webpack.config.cjs
apps/agent-copilot/src/: api.js  index.js  theme.js
apps/backend/: .env.example  Dockerfile  README.md  alembic.ini  db.py  main.py  migrations.py  requirements.txt
apps/backend/migrations/: env.py
apps/backend/tests/: conftest.py  test_analytics_router.py  test_auth.py  test_auth_db.py  test_cache.py  test_compliance.py  test_compliance_router.py  test_core_db.py  (+17 more)
apps/customer-bot/: Dockerfile  README.md  cypress.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
apps/demo-video/: README.md  package-lock.json  package.json  tsconfig.json
docs/: ADR.md  API.postman.json  CONTRIBUTING.md  SETUP.md  SOC2_checklist.md  openapi.yaml
scripts/: test-local.ps1  test-local.sh
tests/agent_framework/: __init__.py  test_core.py  test_hitl.py  test_multitenancy.py
tests/backend/: test_rag_chain.py
tests/integration/: conftest.py  test_full_flow.py
tests/mocks/: README.md
tests/performance/: test_feedback_validation.py
(+108 files in other folders)
